<resources>
    <string name="app_name">Quizly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_quizly">Welcome to Quizly!</string>
    <string name="test_your_knowledge_of_physics_with_a_small_quiz">Test your knowledge of physics with a small quiz.</string>
    <string name="name">Name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="answer">Answer!</string>
    <string name="submit">Submit</string>

    <array name="questions">
        <item name="1">@array/question_1</item>
        <item name="2">@array/question_2</item>
        <item name="3">@array/question_3</item>
        <item name="4">@array/question_4</item>
    </array>

    <array name="question_1">
        <item name="question">@array/question_1_text</item>
        <item name="answers">@array/question_1_answers</item>
    </array>

    <string-array name="question_1_text">
        <item name="type">mcq</item>
        <item name="text">The theory of relativity is presented by which scientist?</item>
        <item name="right_answer">1</item>
    </string-array>
    <string-array name="question_1_answers">
        <item>Isaac Newton</item>
        <item>Albert Einstein</item>
        <item>Marie Curie</item>
    </string-array>

    <array name="question_2">
        <item name="question">@array/question_2_text</item>
        <item name="answers">@array/question_2_answers</item>
    </array>

    <string-array name="question_2_text">
        <item name="type">mcq</item>
        <item name="text">Who is the first person to define speed?</item>
        <item name="right_answer">2</item>
    </string-array>
    <string-array name="question_2_answers">
        <item>Newton</item>
        <item>Kepler</item>
        <item>Galileo</item>
    </string-array>

    <array name="question_3">
        <item name="question">@array/question_3_text</item>
        <item name="answers">@array/question_3_answers</item>
    </array>

    <string-array name="question_3_text">
        <item name="type">text</item>
        <item name="text">Total number of colors exists in sunlight?</item>
        <item name="right_answer">7</item>
    </string-array>
    <string-array name="question_3_answers">

    </string-array>

    <array name="question_4">
        <item name="question">@array/question_4_text</item>
        <item name="answers">@array/question_4_answers</item>
    </array>

    <string-array name="question_4_text">
        <item name="type">mrc</item>
        <item name="text">What is the unit of momentum?</item>
        <item name="right_answer">1</item>
    </string-array>
    <string-array name="question_4_answers">
        <item>J/s</item>
        <item>kg m/s</item>
        <item>N m</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="elephant_celebrating">Elephant celebrating</string>
    <string name="your_score_is">Your Score is:</string>
    <string name="play_again">Play Again!</string>
    <string name="new_player">New Player</string>
    <string name="greeting_text">Great job, %s</string>
    <string name="welcome_helper_text">Please enter your first name.</string>

</resources>
