<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLighter"
    tools:context=".ui.welcome.WelcomeFragment"
    android:id="@+id/welcomeFragment"
    >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_quizly"
        style="@style/CustomTextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/small_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_your_knowledge_of_physics_with_a_small_quiz"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:hint="@string/name"
        app:helperText="@string/welcome_helper_text"
        app:helperTextTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/small_description_text"
        app:layout_constraintStart_toStartOf="@id/small_description_text"
        app:layout_constraintTop_toBottomOf="@id/small_description_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_editText_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_to_quiz_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name_text_field"
        app:layout_constraintStart_toStartOf="@id/name_text_field"
        app:layout_constraintTop_toBottomOf="@id/name_text_field"
        app:layout_constraintVertical_bias="0.75"

        />
</androidx.constraintlayout.widget.ConstraintLayout>